--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongoose": "^7.3.4"
+    "mongoose": "^7.3.4",
+    "nodemon": "^3.0.1"
   }
 }
